--- a/Exome_Analysis.ipynb
+++ b/Exome_Analysis.ipynb
@@ -342,18 +342,18 @@
    ],
    "source": [
     "# STEP 4: homozygous vs heterozygous\n",
-    "dfHetero = df[df['ZYGOSITY'] != 'homozygous alt1']\n",
-    "dfHomo = df[df['ZYGOSITY'] == 'homozygous alt1']\n",
+    "dfHet = df[df['ZYGOSITY'] != 'homozygous alt1']\n",
+    "dfHom = df[df['ZYGOSITY'] == 'homozygous alt1']\n",
     "\n",
-    "dfHetero = dfHetero[dfHetero.duplicated(subset=['REFGENE_GENE'], keep=False)]\n",
-    "df = dfHomo.append(dfHetero)\n",
+    "dfHet = dfHet[dfHet.duplicated(subset=['REFGENE_GENE'], keep=False)]\n",
+    "df = dfHom.append(dfHet)\n",
     "print('There are', len(df.index), 'rows left at this step.')\n",
     "\n",
     "# kick out same ones:\n",
     "df = df.drop_duplicates()\n",
     "print('There are', len(df.index), 'rows left at this step.')\n",
     "\n",
-    "df.to_csv(\"HomoHeteroNew2.csv\")"
+    "#df.to_csv(\"df_step4.csv\")"
    ]
   },
   {
